@@ -3,7 +3,6 @@ flumotiondir = $(libdir)/flumotion/python/flumotion/manager
 flumotion_PYTHON = \
 	__init__.py \
 	admin.py \
-	auth.py \
 	component.py \
 	config.py \
 	launcher.py \
