@@ -1,5 +1,14 @@
 2004-09-08  Thomas Vander Stichele  <thomas at apestaart dot org>
 
+	* doc/reference/Makefile.am:
+	* flumotion/common/Makefile.am:
+	* flumotion/component/http/http.py:
+	* flumotion/manager/Makefile.am:
+	* flumotion/manager/auth.py:
+	  move auth to common
+
+2004-09-08  Thomas Vander Stichele  <thomas at apestaart dot org>
+
 	* TODO:
 	* bin/flumotion.in:
 	* configure.ac:
